--- a/06 - HelloObjectify/WebContent/index.html
+++ b/06 - HelloObjectify/WebContent/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Spring MVC with Objectify</h1>
-	<h3><a href="customers">Customers List</a></h3>
+	<h3><a href="customersList">Customers List</a></h3>
   </body>
 </html>
