--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-adios
-<hr>
-<script src="https://gist.github.com/AntonioDiaz/770a95f2c6b2d1682299c6643bc5a0d9.js"></script>
-<hr>
+ <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Hello Controller</title>
+  </head>
+  <body>
+    <h3>Spring MVC - source</h3>
+    <br>
+    <hr>
+    <script src="https://gist.github.com/AntonioDiaz/770a95f2c6b2d1682299c6643bc5a0d9.js"></script>
+    <hr>
+    <script src="https://gist.github.com/AntonioDiaz/8f059c347ed60d595cd47bcb8294123d.js"></script>
+  </body>
+</html>  
