--- a/index.html
+++ b/index.html
@@ -2,22 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Controller</title>
-   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h3>Spring MVC - source</h3>
-    <br>
-    <hr>
-    <script src="https://gist.github.com/AntonioDiaz/770a95f2c6b2d1682299c6643bc5a0d9.js"></script>
-    <hr>
-    <script src="https://gist.github.com/AntonioDiaz/8f059c347ed60d595cd47bcb8294123d.js"></script>
+	<div class="container" id="top">
+		<h3>Spring MVC</h3>
+		<h5><a href="#minimal_dependences">Minimal Maven dependences</a></h5>
+		<h5><a href="#minimal_controller">Minimal controller</a></h5>
+		<br>
+		<hr>
+		<div id="minimal_dependences">
+			<h4>Minimal Maven dependences</h4>
+			<script src="https://gist.github.com/AntonioDiaz/770a95f2c6b2d1682299c6643bc5a0d9.js"></script>
+		</div>
+		<br>
+		<div id="minimal_controller">
+			<h4>Minimal Maven dependences</h4>
+			<script src="https://gist.github.com/AntonioDiaz/8f059c347ed60d595cd47bcb8294123d.js"></script>
+		</div>
+	</div>
   </body>
 </html>  
