--- a/index.html
+++ b/index.html
@@ -12,16 +12,26 @@
 	<div class="container" id="top">
 		<h3>Spring MVC</h3>
 		<h5><a href="#minimal_dependences">Minimal Maven dependences</a></h5>
-		<h5><a href="#minimal_controller">Minimal controller</a></h5>
-		<br>
+		<h5><a href="#web.xml">web.xml</a></h5>
+		<h5><a href="#applicationContext.xml">applicationContext.xml</a></h5>		
 		<hr>
 		<div id="minimal_dependences">
 			<h4>Minimal Maven dependences</h4>
 			<script src="https://gist.github.com/AntonioDiaz/770a95f2c6b2d1682299c6643bc5a0d9.js"></script>
 		</div>
 		<br>
+		<div id="web.xml">
+			<h4>web.xml</h4>
+			<script src="https://gist.github.com/AntonioDiaz/1388389782b1a483bbb51ffbf013a5a7.js"></script>
+		</div>		
+		<br>
+		<div id="applicationContext.xml">
+			<h4>applicationContext.xml</h4>
+			<script src="https://gist.github.com/AntonioDiaz/313f42388e275540ca3b2fa03759b001.js"></script>
+		</div>		
+		<br>		
 		<div id="minimal_controller">
-			<h4>Minimal Maven dependences</h4>
+			<h4>Minimal controller</h4>
 			<script src="https://gist.github.com/AntonioDiaz/8f059c347ed60d595cd47bcb8294123d.js"></script>
 		</div>
 	</div>
