adding content to web.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<h5><a href="#minimal_dependences">Minimal Maven dependences</a></h5>
 		<h5><a href="#web.xml">web.xml</a></h5>
 		<h5><a href="#applicationContext.xml">applicationContext.xml</a></h5>		
+		<h5><a href="#simple_controller">Simple Controller</a></h5>		
 		<hr>
 		<div id="minimal_dependences">
 			<h4>Minimal Maven dependences</h4>
@@ -30,8 +31,8 @@
 			<script src="https://gist.github.com/AntonioDiaz/313f42388e275540ca3b2fa03759b001.js"></script>
 		</div>		
 		<br>		
-		<div id="minimal_controller">
-			<h4>Minimal controller</h4>
+		<div id="simple_controller">
+			<h4>Simple controller</h4>
 			<script src="https://gist.github.com/AntonioDiaz/8f059c347ed60d595cd47bcb8294123d.js"></script>
 		</div>
 	</div>
