--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Controller</title>
+    <title>Spring MVC - my notes</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
 	<div class="container" id="top">
-		<h3>Spring MVC</h3>
+		<h3>Personal and public notes about Spring MVC</h3>
 		<h5><a href="#minimal_dependences">Minimal Maven dependences</a></h5>
 		<h5><a href="#web.xml">web.xml</a></h5>
 		<h5><a href="#applicationContext.xml">applicationContext.xml</a></h5>		
