adding jsp template

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<h5><a href="#web.xml">web.xml</a></h5>
 		<h5><a href="#applicationContext.xml">applicationContext.xml</a></h5>		
 		<h5><a href="#simple_controller">Simple Controller</a></h5>		
+		<h5><a href="#simple_jsp">Simple JSP</a></h5>		
 		<hr>
 		<div id="minimal_dependences">
 			<h4>Minimal Maven dependences</h4>
@@ -35,6 +36,10 @@
 			<h4>Simple controller</h4>
 			<script src="https://gist.github.com/AntonioDiaz/8f059c347ed60d595cd47bcb8294123d.js"></script>
 		</div>
+		<div id="simple_jsp">
+			<h4>Simple JSP</h4>
+			<script src="https://gist.github.com/AntonioDiaz/9feda29b5592e75a6b131c87e40a7b79.js"></script>
+		</div>		
 	</div>
   </body>
 </html>  
